# specter-llm

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh
auth/: rbac.py  session.py
config/: settings.py
data/CUAD_v1/label_group_xlsx/: ~$Label Report - Anti-assignment, CIC (Group 3).xlsx
evaluation/: README.md  rag_runner.py  run_evaluation.py
evaluation/dataset/: qa_dataset.json
evaluation/metrics/: _llm.py  bleu.py  laaj.py  ragas_local.py  rouge.py
evaluation/results/: _checkpoint.json  answers_cache.json
graph/: builder.py  definitions.py  traversal.py
ingestion/: clause_extractor.py  cuad_loader.py  embedder.py  pdf_reader.py  red_flag_detector.py
models/: document.py  escalation.py  query.py  user.py
pages/: 1_Query.py  2_Legal_Dashboard.py
query/: confidence_gate.py  impact.py  llm_client.py  pipeline.py  qa.py  risk.py
storage/: database.py  qdrant_store.py  vector_store.py
