[project]
name = "specter-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "networkx>=3.2",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pickle5 ; python_full_version < '3.8'",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
